          * reader 文本分析读取器
          * strToJson JSON字符串解析
        3、开发服务器
          * 新增 devServer.intercept 请求拦截
          * 新增对 if-modified-since和last-modified 之304协商缓存的支持
v1.3.1:
    date:2025-05-23
    changes:
      - 修复bug
        1、开发服务器
          * 由于是否入口判断导致import语句未正确解析
          * 修复 Last-Modified 格式不规范导致的运行报错
v1.4.0:
    date:2025-09-02
    changes:
      - 修复bug
        1、修复logform运行报错
      - 新增功能
        1、API功能（浏览器）
          * dateFormat 日期格式化
          * numberFormat 数字格式化
          * XHRIntercept XHR拦截
        2、API功能（Node.js）
          * dateFormat 日期格式化
          * numberFormat 数字格式化
        3、开发服务器
          * 新增 serve.d.ts 以支持作为API在TypeScript中环境
            （仅对内使用，未正式对外暴露API相关文档）
          * 添加304是否启用开关
          * 应用市场（website内置网站）
v1.4.1:
    date:2025-09-02
    changes:
        - 修复bug
          1、修复开发服务器大文件丢失文件大小问题
v1.5.0:
    date:2025-11-13
    changes:
        - 修复bug
          1、修复404网站在手机浏览器显示高问题
          2、服务器响应类型由 Content-type 改为 Content-Type
          3、修复dateFormat第二个参数无法缺省报错
          4、修复numberFormat不支持负数问题
        - 优化改造
          1、优化run命令日志打印
        - 新增功能
          1、开发服务器 / 应用市场
            * 群聊天
            * 图片编辑器
            * 图片转PDF
          2、API功能（Node.js）
            * disk 磁盘相关操作
            （包括：moveDisk、listDisk）
v1.6.0:
    date:2025-12-14
    changes:
        - 修复bug
          1、修复logform在run下无法正常使用问题
            （关联issue： https://github.com/oi-contrib/OIPage/issues/4 ）
          2、修复服务器错误修改XHR等请求数据问题
        - 优化改造
          1、命令行帮助打印更可读
        - 新增功能
          1、命令（oipage-cli）
            * disk 
                --link 创建磁盘链接
                --delempty 删除空文件夹 
            * network 网络相关
            * run 支持动态参数
              （关联issue： https://github.com/oi-contrib/OIPage/issues/5 ）
          2、API功能（Node.js）
            * disk 磁盘相关操作
            （包括：linkDisk）
v1.7.0:
    date:
    changes:
        - 优化改造
          1、types定义模块，方便使用时代码提示
        - 修复bug
          1、修复特殊情况下 “应用市场” 依赖查找错误问题