@@ -8,7 +8,8 @@
         .bar {
             width: 0;
             height: 30px;
-            background-color: aquamarine;
+            background-color: red;
+            outline: 2px solid black;
         }
     </style>
 </head>
