@@ -140,5 +140,6 @@ v1.7.0:
     changes:
         - 优化改造
           1、types定义模块，方便使用时代码提示
+          2、使用requestAnimationFrame改造animation
         - 修复bug
           1、修复特殊情况下 “应用市场” 依赖查找错误问题
